Replaced depreceated URL Constructor with URI in DroneSimulationInterfaceAPI - getConnection()